Removed unused tabs. Updated shared header component to actually contain the header. Updated Home page to use shared header component.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
+<tc-header [pageName]="'Home'"></tc-header>
 
 <ion-content>
 
