--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,5 @@
-<p>
-  header works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>{{ pageName }}</ion-title>
+  </ion-toolbar>
+</ion-header>
