--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -4,5 +4,9 @@
       <ion-icon name="flash"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="info">
+      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-label>Info</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
