--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,7 @@
 :root {
   --ion-color-primary: #3A3C3C;
   --ion-color-primary-rgb: 58,60,60;
-  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast: #FFD700;
   --ion-color-primary-contrast-rgb: 255,255,255;
   --ion-color-primary-shade: #333535;
   --ion-color-primary-tint: #4e5050;
