Updated theme to be SELU colors (#5)

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,24 +1,24 @@
 :root {
-  --ion-color-primary: #3A3C3C;
-  --ion-color-primary-rgb: 58,60,60;
-  --ion-color-primary-contrast: #FFD700;
+  --ion-color-primary: #096434;
+  --ion-color-primary-rgb: 9,100,52;
+  --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255,255,255;
-  --ion-color-primary-shade: #333535;
-  --ion-color-primary-tint: #4e5050;
+  --ion-color-primary-shade: #08582e;
+  --ion-color-primary-tint: #227448;
 
-  --ion-color-secondary: #006400;
-  --ion-color-secondary-rgb: 0,100,0;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255,255,255;
-  --ion-color-secondary-shade: #005800;
-  --ion-color-secondary-tint: #1a741a;
+  --ion-color-secondary: #E9C225;
+  --ion-color-secondary-rgb: 233,194,37;
+  --ion-color-secondary-contrast: #000000;
+  --ion-color-secondary-contrast-rgb: 0,0,0;
+  --ion-color-secondary-shade: #cdab21;
+  --ion-color-secondary-tint: #ebc83b;
 
-  --ion-color-tertiary: #FFD700;
-  --ion-color-tertiary-rgb: 255,215,0;
+  --ion-color-tertiary: #ffffff;
+  --ion-color-tertiary-rgb: 255,255,255;
   --ion-color-tertiary-contrast: #000000;
   --ion-color-tertiary-contrast-rgb: 0,0,0;
-  --ion-color-tertiary-shade: #e0bd00;
-  --ion-color-tertiary-tint: #ffdb1a;
+  --ion-color-tertiary-shade: #e0e0e0;
+  --ion-color-tertiary-tint: #ffffff;
 
   --ion-color-success: #10dc60;
   --ion-color-success-rgb: 16,220,96;
@@ -41,12 +41,12 @@
   --ion-color-danger-shade: #d33939;
   --ion-color-danger-tint: #f25454;
 
-  --ion-color-dark: #323434;
-  --ion-color-dark-rgb: 50,52,52;
+  --ion-color-dark: #222428;
+  --ion-color-dark-rgb: 34,34,34;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255,255,255;
-  --ion-color-dark-shade: #2c2e2e;
-  --ion-color-dark-tint: #474848;
+  --ion-color-dark-shade: #1e2023;
+  --ion-color-dark-tint: #383a3e;
 
   --ion-color-medium: #989aa2;
   --ion-color-medium-rgb: 152,154,162;
