Added required pages (#6)

--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -4,6 +4,18 @@
       <ion-icon name="flash"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="tc-tour">
+      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-label>Turtle Cove</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="gw-tour">
+      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-label>Green Wave</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="checklist">
+      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-label>Checklist</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="info">
       <ion-icon name="information-circle-outline"></ion-icon>
       <ion-label>Info</ion-label>
