--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>{{ pageName }}</ion-title>
+    <ion-title>Turtle Cove</ion-title>
   </ion-toolbar>
 </ion-header>
