Home nav and styling (#7)
* Added events and info pages and updated the nav styling

--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -1,5 +1,10 @@
-<tc-header pageName="Info"></tc-header>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="tabs/home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Info</ion-title>
+</ion-toolbar>
+</ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
