--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,26 @@
 <tc-header [pageName]="'Home'"></tc-header>
 
 <ion-content>
-
+  <div style="display: flex; flex-direction: row;">
+    <ion-button routerLink="/info">
+      Info
+    </ion-button>
+    <ion-button routerLink="/events">
+      Events
+    </ion-button>
+  </div>
+  <!-- <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-button routerLink="/info">
+          Info
+        </ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <ion-button routerLink="/events">
+          Events
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid> -->
 </ion-content>
