--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,24 +1,20 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom" color="primary">
     <ion-tab-button tab="home">
-      <ion-icon name="flash"></ion-icon>
+      <ion-icon name="home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="tc-tour">
-      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-icon name="boat"></ion-icon>
       <ion-label>Turtle Cove</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="gw-tour">
-      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-icon name="map"></ion-icon>
       <ion-label>Green Wave</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="checklist">
-      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-icon name="checkmark"></ion-icon>
       <ion-label>Checklist</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="info">
-      <ion-icon name="information-circle-outline"></ion-icon>
-      <ion-label>Info</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
