--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Turtle Cove</ion-title>
+    <ion-title>
+        <!--<img src="background2.jpg" width="40px" style="display:inline-block" height="40px"/> -->
+        <ion-icon name="paw"></ion-icon>
+      Turtle Cove</ion-title>
   </ion-toolbar>
 </ion-header>
