Removed unneeded comments

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -19,21 +19,8 @@
             the greater University community.
           </ion-card-content>
         </ion-card>
-        <!-- <img src="assets/img/turtle-cove.jpg"/> -->
       </ion-col>
     </ion-row>
-    <!-- <ion-row>
-      <ion-col>
-        <p style="text-align: center">
-          The mission of the Turtle Cove Environmental Research Station (Turtle
-          Cove ERS) is to facilitate and support a better understanding of
-          Southeast Louisiana's coastal wetland environments through research,
-          education, and public outreach activities and programs for
-          Southeastern's students, faculty and staff as well as the greater
-          University community.
-        </p>
-      </ion-col>
-    </ion-row> -->
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
@@ -57,9 +44,8 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <div style="display: flex; flex-direction: row;">
-          <!-- <ion-button (click)="openUrl('https://www.youtube-nocookie.com/embed/iqhW54bWwnw')"> -->
-            <ion-button (click)="openUrl('https://www.youtube-nocookie.com/embed/iqhW54bWwnw')">
+        <div style="display: flex; flex-direction: row;">\
+          <ion-button (click)="openUrl('https://www.youtube-nocookie.com/embed/iqhW54bWwnw')">
             Troubled Waters
           </ion-button>
         </div>
