Added Template for Checklist Page

--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -1,5 +1,40 @@
 <tc-header [pageName]="'Species Checklist'"></tc-header>
 
 <ion-content>
-  
+    <ion-header translucent>
+    <ion-toolbar>
+        <ion-title>Species Checklist</ion-title>
+    </ion-toolbar>
+    </ion-header>
+    <ion-list>
+        <ion-list-header>Fish/Macroinvertebrate</ion-list-header>
+        <ion-item>
+            <ion-label>Alligator gar / Atractosteus spatula</ion-label>
+            <ion-checkbox color="primary" slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-list-header>Reptiles</ion-list-header>
+        <ion-item>
+                <ion-label>Alligator Snapping Turtle / Macrochelys temminckii</ion-label>
+                <ion-checkbox color="primary" slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-list-header>Plants</ion-list-header>
+        <ion-item>
+                <ion-label>Alligatorweed / Alternanthera philoxeroides</ion-label>
+                <ion-checkbox color="primary" slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-list-header>Birds</ion-list-header>
+        <ion-item>
+                <ion-label>Anhinga / Anhinga anhinga</ion-label>
+                <ion-checkbox color="primary" slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-list-header>Mammals</ion-list-header>
+        <ion-item>
+                <ion-label>Cotton Mouse / Peromyscus gossypinus</ion-label>
+                <ion-checkbox color="primary" slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-item>
+            <ion-label>Pao / Pao</ion-label>
+            <ion-checkbox color="primary" slot="start"></ion-checkbox>
+        </ion-item>
+        </ion-list>
 </ion-content>
