--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -15,13 +15,14 @@
           {{ obj.class }}
       </ion-item-divider>
       <ng-container *ngFor="let letter of alphabet">
-        <ion-item-group *ngIf="obj.expanded && (getSpeciesNames(obj.species) | filterByStartsWith : letter)">
+        <ion-item-group *ngIf="obj.expanded && (obj.species | filterSpeciesByNameStartsWith : letter)">
           <ion-item-divider style="background-color: lightgray;" mode="ios">{{ letter }}</ion-item-divider>
-          <ng-container *ngFor="let species of getSpeciesNames(obj.species).sort() | filterByStartsWith : letter; let i = index">
-            <ion-item [attr.lines]="(i == (getSpeciesNames(obj.species).sort() | filterByStartsWith : letter).length - 1) ? 'none' : 'inset'">
-              <ion-label>{{ species }}</ion-label>
+          <ng-container *ngFor="let species of (obj.species | filterSpeciesByNameStartsWith : letter).sort(); let i = index">
+            <ion-item [attr.lines]="(i == (obj.species | filterSpeciesByNameStartsWith : letter).sort().length - 1) ? 'none' : 'inset'">
+              <ion-label>{{ species.name }}</ion-label>
               <ion-checkbox color="primary" slot="start"></ion-checkbox>
-              <ion-icon style="z-index: 99;" slot="end" (click)="openSpeciesInfo(obj.species[i])" name="information-circle-outline"></ion-icon>
+              {{i}}
+              <ion-icon style="z-index: 99;" slot="end" (click)="openSpeciesInfo(species, obj.class)" name="information-circle-outline"></ion-icon>
             </ion-item>
           </ng-container>
         </ion-item-group>
