--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -1,40 +1,40 @@
 <tc-header [pageName]="'Species Checklist'"></tc-header>
 
 <ion-content>
-    <ion-header translucent>
+  <ion-header translucent>
     <ion-toolbar>
-        <ion-title>Species Checklist</ion-title>
+      <ion-title>Species Checklist</ion-title>
     </ion-toolbar>
-    </ion-header>
-    <ion-list>
-        <ion-list-header>Fish/Macroinvertebrate</ion-list-header>
-        <ion-item>
-            <ion-label>Alligator gar / Atractosteus spatula</ion-label>
-            <ion-checkbox color="primary" slot="start"></ion-checkbox>
-        </ion-item>
-        <ion-list-header>Reptiles</ion-list-header>
-        <ion-item>
-                <ion-label>Alligator Snapping Turtle / Macrochelys temminckii</ion-label>
-                <ion-checkbox color="primary" slot="start"></ion-checkbox>
-        </ion-item>
-        <ion-list-header>Plants</ion-list-header>
-        <ion-item>
-                <ion-label>Alligatorweed / Alternanthera philoxeroides</ion-label>
-                <ion-checkbox color="primary" slot="start"></ion-checkbox>
-        </ion-item>
-        <ion-list-header>Birds</ion-list-header>
-        <ion-item>
-                <ion-label>Anhinga / Anhinga anhinga</ion-label>
-                <ion-checkbox color="primary" slot="start"></ion-checkbox>
-        </ion-item>
-        <ion-list-header>Mammals</ion-list-header>
-        <ion-item>
-                <ion-label>Cotton Mouse / Peromyscus gossypinus</ion-label>
-                <ion-checkbox color="primary" slot="start"></ion-checkbox>
-        </ion-item>
-        <ion-item>
-            <ion-label>Pao / Pao</ion-label>
-            <ion-checkbox color="primary" slot="start"></ion-checkbox>
-        </ion-item>
-        </ion-list>
+  </ion-header>
+  <ion-item-group>
+    <div style="display: flex; align-content: center; width: 100%;">
+      <ion-button class="top-button" color="secondary" (click)="toggleExpandAll()">
+        <ion-icon slot="start" size="large" [attr.name]="!anyExpanded ? 'add' : 'remove'" mode="ios"></ion-icon>
+        {{ anyExpanded ? 'Collapse' : 'Expand' }} All
+      </ion-button>
+      <ion-button class="top-button" color="secondary" (click)="presentResetAlert()">
+          Reset All
+        </ion-button>
+    </div>
+    <ng-container *ngFor="let obj of species">
+      <ion-item-divider no-padding mode="ios" sticky style="background-color: gray; color: white;" (click)="toggleClass(obj)">
+          <ion-button class="ion-no-padding" slot="start" fill="clear" size="small" color="light">
+              <ion-icon slot="icon-only" size="large" [attr.name]="!obj.expanded ? 'add' : 'remove'" mode="ios"></ion-icon>
+          </ion-button>
+          {{ obj.class }}
+      </ion-item-divider>
+      <ng-container *ngFor="let letter of alphabet">
+        <ion-item-group *ngIf="obj.expanded && (obj.species | filterSpeciesByNameStartsWith : letter)">
+          <ion-item-divider style="background-color: lightgray; z-index: 0;" mode="ios">{{ letter }}</ion-item-divider>
+          <ng-container *ngFor="let species of (obj.species | filterSpeciesByNameStartsWith : letter).sort(); let i = index">
+            <ion-item [attr.lines]="(i == (obj.species | filterSpeciesByNameStartsWith : letter).sort().length - 1) ? 'none' : 'inset'">
+              <ion-label>{{ species.name }}</ion-label>
+              <ion-checkbox color="primary" slot="start" [(ngModel)]="species.checked" (ionChange)="saveSpecies()"></ion-checkbox>
+              <ion-icon style="z-index: 99;" slot="end" (click)="openSpeciesInfo(species, obj.class)" name="information-circle-outline"></ion-icon>
+            </ion-item>
+          </ng-container>
+        </ion-item-group>
+      </ng-container>
+    </ng-container>
+  </ion-item-group>
 </ion-content>
