--- a/src/global.scss
+++ b/src/global.scss
@@ -10,6 +10,10 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+body {
+   background-color: var(--ion-color-primary);
+}
+
 ion-content {
     --background: #eeeeee;
 }
