--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -1,5 +1,52 @@
 <tc-header [pageName]="'Turtle Tour'"></tc-header>
 
 <ion-content>
-
+    <ion-grid>
+            <ion-row>
+                <ion-col>
+                    <div>
+                        <ion-button size="large">
+                            1
+                        </ion-button >
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div>
+                        <ion-button size="large">
+                            2
+                        </ion-button>
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div>
+                        <ion-button size="large">
+                            3
+                        </ion-button>
+                    </div>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <div>
+                        <ion-button size="large">
+                            4
+                        </ion-button >
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div>
+                        <ion-button size="large">
+                            5
+                        </ion-button>
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div>
+                        <ion-button size="large">
+                            6
+                        </ion-button>
+                    </div>
+                </ion-col>
+            </ion-row>
+    </ion-grid>
 </ion-content>
