--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -4,21 +4,21 @@
     <ion-grid>
             <ion-row>
                 <ion-col>
-                    <div>
+                    <div style="display: flex; flex-direction: row;">
                         <ion-button size="large">
                             1
                         </ion-button >
                     </div>
                 </ion-col>
                 <ion-col>
-                    <div>
+                    <div style="display: flex; flex-direction: row;">
                         <ion-button size="large">
                             2
                         </ion-button>
                     </div>
                 </ion-col>
                 <ion-col>
-                    <div>
+                    <div style="display: flex; flex-direction: row;">
                         <ion-button size="large">
                             3
                         </ion-button>
@@ -27,24 +27,79 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <div>
+                    <div style="display: flex; flex-direction: row;">
                         <ion-button size="large">
                             4
                         </ion-button >
                     </div>
                 </ion-col>
                 <ion-col>
-                    <div>
+                    <div style="display: flex; flex-direction: row;">
                         <ion-button size="large">
                             5
                         </ion-button>
                     </div>
                 </ion-col>
                 <ion-col>
-                    <div>
+                    <div style="display: flex; flex-direction: row;">
                         <ion-button size="large">
                             6
                         </ion-button>
+                    </div>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <div style="display: flex; flex-direction: row;">
+                        <ion-button size="large">
+                            7
+                        </ion-button >
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div style="display: flex; flex-direction: row;">
+                        <ion-button size="large" onclick>
+                            8
+                        </ion-button>
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div style="display: flex; flex-direction: row;">
+                        <ion-button size="large">
+                            9
+                        </ion-button>
+                    </div>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <div style="display: flex; flex-direction: row;">
+                        <ion-button size="large">
+                            10
+                        </ion-button >
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div style="display: flex; flex-direction: row;">
+                        <ion-button size="large" onclick>
+                            11
+                        </ion-button>
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <div style="display: flex; flex-direction: row;">
+                        <ion-button size="large">
+                            12
+                        </ion-button>
+                    </div>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <div style="display: flex; flex-direction: row;">
+                        <ion-button color="secondary" size="large">
+                            Reset All
+                        </ion-button >
                     </div>
                 </ion-col>
             </ion-row>
