--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -49,13 +49,22 @@
       </ion-col>
     </ion-row>
     <ion-row>
-        <ion-col>
-          <div style="display: flex; flex-direction: row;">
-            <ion-button color="secondary" (click)="openUrl('https://www.southeastern.edu/alumni_donors/foundation/giving/tutlecove/index.html')">
-                Support Us!
-            </ion-button>
-          </div>
-        </ion-col>
-      </ion-row>
+      <ion-col>
+        <div style="display: flex; flex-direction: row;">
+          <ion-button color="secondary" (click)="openUrl('https://www.southeastern.edu/alumni_donors/foundation/giving/tutlecove/index.html')">
+              Support Us!
+          </ion-button>
+        </div>
+      </ion-col>
+    </ion-row>
+    <!-- <ion-row>
+      <ion-col>
+        <div style="display: flex; flex-direction: row;">
+          <ion-button color="secondary" (click)="logLocation()">
+              Check Location
+          </ion-button>
+        </div>
+      </ion-col>
+    </ion-row> -->
   </ion-grid>
 </ion-content>
